@@ -109,6 +109,8 @@ SVN trunk (1.1.1+svn):
    * Added ignore list on MP
    * MP server only accepts nicks made from alphanumeric and underscore
    characters
+   * force a refresh after calls to ONSCREEN scrolls, to avoid refresh
+   problems.
 
 Version 1.1.1:
  * campaigns
